fixed gap

--- a/css/index.css
+++ b/css/index.css
@@ -749,6 +749,8 @@ input[type="text"], input[type="tel"], input[type="email"] {
 .testimonials-block{
   display: grid;
   grid-template-columns: 10% 80% 10%;
+  margin:auto;
+  padding: auto;
 }
 
 .arrow-left{
